Add tags to project work post
Added tags to the post for better categorization.

--- a/src/posts/2025-12-06.md
+++ b/src/posts/2025-12-06.md
@@ -1,7 +1,11 @@
 title: Meine Projektarbeit für die IHK-Prüfung zum IT-Systemkaufmann
+
 url: https://fischr.bearblog.dev/meine-projektarbeit-fr-die-ihkprfung/
+
 date: 2025-12-06 12:55
-tags: 
+
+tags: blog,freieswissen
+
 
 ![Prüfung, bitte leise!](https://bear-images.sfo2.cdn.digitaloceanspaces.com/fischr/img_8526.webp)
 
