Format update for project work post

--- a/src/posts/2025-12-06.md
+++ b/src/posts/2025-12-06.md
@@ -12,7 +12,6 @@ Da der Ausbildungsberuf des IT-Systemkaufmanns noch relativ neu ist, habe ich tr
 
 Die Projektdokumentation trägt den Titel „Planung und Kalkulation eines Wireless-LAN“ und beschäftigt sich mit der Investitionsfrage in diese Technologie. Die Projektdokumentation wurde von der IHK-Prüfungskommission mit 92,5 von 100 Punkten bewertet.
 
+[Download meiner IHK-Prüfung (PDF)](https://bear-images.sfo2.cdn.digitaloceanspaces.com/fischr/projektarbeit-it-systemkaufmann-2002.pdf)
+
 Ich weise ausdrücklich darauf hin, dass die Dokumentation dem Stand der Technik sowie den Prüfungsvorgaben des Jahres 2002 entspricht. Die Welt der Technik hat sich seitdem mehrfach weitergedreht – und auch die Prüfungsvorgaben können mittlerweile anders aussehen. Verwendet das Dokument also ausschließlich als Beispiel für Aufbau und Umfang einer solchen Dokumentation.
-
-![Download meiner IHK-Prüfung (PDF)](https://bear-images.sfo2.cdn.digitaloceanspaces.com/fischr/projektarbeit-it-systemkaufmann-2002.pdf)
-
