Enhance project documentation with infobox
Added an infobox to clarify the relevance of the documentation.

--- a/src/posts/2025-12-06.md
+++ b/src/posts/2025-12-06.md
@@ -3,8 +3,7 @@ url: https://fischr.bearblog.dev/meine-projektarbeit-fr-die-ihkprfung/
 date: 2025-12-06 12:55
 tags: blog,freieswissen
 
-
-![Prüfung, bitte leise!](https://bear-images.sfo2.cdn.digitaloceanspaces.com/fischr/img_8526.webp)
+![Prüfung, bitte leise! Foto: Dennis Wegner (CC BY-NC-SA 2.0)](https://bear-images.sfo2.cdn.digitaloceanspaces.com/fischr/img_8526.webp)
 
 Die IHK-Prüfung zum IT-Systemkaufmann sieht vor, dass neben den schriftlichen Prüfungen auch eine sogenannte Projektarbeit durchgeführt wird. In Vorbereitung auf diese Projektarbeit habe ich im Internet nach Beispielen gesucht, die mir eine ungefähre Vorstellung darüber geben, welcher Aufbau und Umfang von der Prüfungskommission gefordert wird.
 
@@ -14,4 +13,7 @@ Die Projektdokumentation trägt den Titel „Planung und Kalkulation eines Wirel
 
 [Download meiner IHK-Prüfung (PDF)](https://bear-images.sfo2.cdn.digitaloceanspaces.com/fischr/projektarbeit-it-systemkaufmann-2002.pdf)
 
-Ich weise ausdrücklich darauf hin, dass die Dokumentation dem Stand der Technik sowie den Prüfungsvorgaben des Jahres 2002 entspricht. Die Welt der Technik hat sich seitdem mehrfach weitergedreht – und auch die Prüfungsvorgaben können mittlerweile anders aussehen. Verwendet das Dokument also ausschließlich als Beispiel für Aufbau und Umfang einer solchen Dokumentation.
+<div class="infobox-frame">
+<div class="infobox-icon"></div>
+<div class="infobox-text">Die Dokumentation entspricht dem Stand der Technik sowie den Prüfungsvorgaben des Jahres 2002. Die Welt der Technik hat sich seitdem mehrfach weitergedreht, und auch die Prüfungsvorgaben können mittlerweile anders aussehen. Verwendet das Dokument also ausschließlich als Beispiel für Aufbau und Umfang einer solchen Dokumentation.</div>
+</div>
